# log-multiplexer-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.envs/: sample
docker/staging/: Dockerfile  Makefile  README.md
docker/staging/.envs/: sample
src/: error.rs  lib.rs  log_msg.rs  main.rs  server.rs
src/listener/: mod.rs  tcp.rs
src/settings/: error.rs  mod.rs  mongo.rs  struc.rs
src/ship_out/: mod.rs  mongo.rs  stdout.rs
