[package]
name = "log-multiplexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
serde = "1.0.163"
serde_json = "1.0.96"
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"


[dependencies.kirkiano-util]
git = "ssh://github.com/kirkiano/rust-utils.git"
rev = "9fa38d3747c59cf8712d537e1aff80200dbae15a"


[dependencies.mongodb]
version = "2.5.0"
features = ["tokio-sync"]

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "net", "macros", "rt-multi-thread", "sync", "io-util"]
